--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "agent-base": "^6.0.2",
     "agentkeepalive": "^4.5.0",
     "aggregate-error": "^3.1.0",
+    "animate.css": "^4.1.1",
     "ansi-regex": "^5.0.1",
     "ansi-styles": "^4.3.0",
     "anymatch": "^3.1.3",
@@ -170,8 +171,8 @@
     "spdx-license-ids": "^3.0.16",
     "ssri": "^9.0.1",
     "stdout-stream": "^1.4.1",
-    "string-width": "^4.2.3",
     "string_decoder": "^1.3.0",
+    "string-width": "^4.2.3",
     "strip-ansi": "^6.0.1",
     "strip-indent": "^3.0.0",
     "supports-color": "^7.2.0",
